[package]
name = "choose-your-adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
dotenv = "0.15.0"
anyhow = "1.0"
async-trait = "0.1.68"
reqwest = { version = "0.11", features = ["json"] }


[dev-dependencies]
axum-test = "16.2.0"